# microservices-flask-example

./: README.md  docker-compose.yml
content/: .dockerignore  .flaskenv-Docker  manage.py  pyproject.toml  start-Docker.sh  start.sh
content/config/: __init__.py  base.py  dev.py
content/project/: __init__.py  blueprints_registry.py  extensions.py  tasks.py  worker.py
content/uploads/: test.csv
docker-postgresql-multiple-databases/: create-multiple-postgresql-databases.sh
helpers/: flask_microservices.postman_collection.json  test.csv
interaction/: .flaskenv-Docker  manage.py  pyproject.toml  start-Docker.sh  start.sh
interaction/config/: base.py  dev.py
interaction/migrations/versions/: d84ff0494cf6_.py
interaction/project/: __init__.py  blueprints_registry.py  extensions.py
interaction/project/api/likes/: __init__.py  controller.py  interface.py  model.py  schema.py  service.py
interaction/project/api/reads/: __init__.py  controller.py  interface.py  model.py  schema.py  service.py
interaction/project/lib/: __init__.py  api_utils.py  model_utils.py
nginx/: Dockerfile  nginx.conf
swagger/: openapi.json
users/: .dockerignore  .flaskenv-Docker  .gitignore  Dockerfile  manage.py  pyproject.toml  start-Docker.sh  start.sh
users/config/: __init__.py  base.py  dev.py
users/migrations/versions/: cd7efe16851e_.py  dcf543ee2144_.py
users/project/: __init__.py  blueprints_registry.py  extensions.py
users/project/api/users/: __init__.py  controller.py  interface.py  model.py  schema.py  service.py
users/project/lib/: __init__.py  model_utils.py
(+168 files in other folders)
